--- a/数据结构和算法/数据结构和算法.vcproj
+++ b/数据结构和算法/数据结构和算法.vcproj
@@ -175,7 +175,15 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\2to10.c"
+				>
+			</File>
+			<File
 				RelativePath=".\caesar.c"
+				>
+			</File>
+			<File
+				RelativePath=".\chainedStack.c"
 				>
 			</File>
 			<File
