--- a/数据结构和算法/数据结构和算法.vcproj
+++ b/数据结构和算法/数据结构和算法.vcproj
@@ -275,6 +275,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\二叉树的遍历.c"
+				>
+			</File>
+			<File
 				RelativePath=".\八皇后.c"
 				>
 			</File>
