--- a/数据结构和算法/数据结构和算法.vcproj
+++ b/数据结构和算法/数据结构和算法.vcproj
@@ -295,6 +295,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\ÏßË÷¶þ²æÊ÷.c"
+				>
+			</File>
+			<File
 				RelativePath=".\µÝ¹é.c"
 				>
 			</File>
